--- a/contact/index.html
+++ b/contact/index.html
@@ -12,7 +12,17 @@
     <nav>
         <a href="/">Home</a>
     </nav>
-    
+    <form name="contact" netlify>
+        <p>
+          <label>Name <input type="text" name="name" /></label>
+        </p>
+        <p>
+          <label>Email <input type="email" name="email" /></label>
+        </p>
+        <p>
+          <button type="submit">Send</button>
+        </p>
+      </form>
     <script type="module" src="../src/js/main.js"></script>
     <script type="module" src="./contact.js"></script>
 </body>
