--- a/contact/index.html
+++ b/contact/index.html
@@ -12,15 +12,22 @@
     <nav>
         <a href="/">Home</a>
     </nav>
+    <br>
     <form name="contact" netlify>
         <p>
-          <label>Name <input type="text" name="name" /></label>
+          <label>Name</label><br>
+          <input type="text" name="name" />
         </p>
         <p>
-          <label>Email <input type="email" name="email" /></label>
+          <label>Email</label><br>
+          <input type="email" name="email" />
         </p>
         <p>
-          <button type="submit">Send</button>
+          <label>Message</label><br>
+          <textarea name="message"></textarea>
+        </p>
+        <p>
+          <button type="submit">Send request</button>
         </p>
       </form>
     <script type="module" src="../src/js/main.js"></script>
