connect client content

--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
     <title>ACME FE 134</title>
   </head>
   <body>
-    <h1>Hello</h1>
-    <nav>
-      <a href="/contact/">Contact</a>
-      <a href="/about/">About Us</a>
-    </nav>
+    <div id="home-root"></div>
     <script type="module" src="./src/js/home.js"></script>
     <script type="module" src="./src/js/main.js"></script>
   </body>
