--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/css/common.css">
-    <title>ACME FE 134</title>
+    <title>{{ home.seo.title }}</title>
+    <meta name="description" content="{{ home.seo.description }}">
   </head>
   <body>
     <h1>{{ home.title }}</h1>
